Project 2/CompilerProject2/parser.output
State 0 conflicts: 4 shift/reduce
State 7 conflicts: 4 shift/reduce, 1 reduce/reduce
State 10 conflicts: 3 shift/reduce
State 20 conflicts: 1 reduce/reduce
State 21 conflicts: 1 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: Decl DeclList
    3         | Decl

    4 Decl: VarDecl
    5     | StmtList

    6 VarDecl: TYPE ID SEMICOLON

    7 StmtList: %empty
    8         | Stmt StmtList

    9 Stmt: SEMICOLON
   10     | Expr SEMICOLON

   11 Expr: ID EQ RecursiveFunc
   12     | ID EQ ID
   13     | ID EQ NUMBER
   14     | WRITE ID

   15 RecursiveFunc: NUMBER ADD_OP RecursiveFunc
   16              | ID ADD_OP RecursiveFunc
   17              | NUMBER
   18              | ID


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TYPE <string> (258) 6
    ID <string> (259) 6 11 12 13 14 16 18
    SEMICOLON <char> (260) 6 9 10
    EQ <char> (261) 11 12 13
    ADD_OP <char> (262) 15 16
    NUMBER <number> (263) 13 15 17
    WRITE <string> (264) 14


Nonterminals, with rules where they appear

    $accept (10)
        on left: 0
    Program <ast> (11)
        on left: 1
        on right: 0
    DeclList <ast> (12)
        on left: 2 3
        on right: 1 2
    Decl <ast> (13)
        on left: 4 5
        on right: 2 3
    VarDecl <ast> (14)
        on left: 6
        on right: 4
    StmtList <ast> (15)
        on left: 7 8
        on right: 5 8
    Stmt <ast> (16)
        on left: 9 10
        on right: 8
    Expr <ast> (17)
        on left: 11 12 13 14
        on right: 10
    RecursiveFunc (18)
        on left: 15 16 17 18
        on right: 11 15 16


State 0

    0 $accept: . Program $end

    TYPE       shift, and go to state 1
    ID         shift, and go to state 2
    SEMICOLON  shift, and go to state 3
    WRITE      shift, and go to state 4

    TYPE       [reduce using rule 7 (StmtList)]
    ID         [reduce using rule 7 (StmtList)]
    SEMICOLON  [reduce using rule 7 (StmtList)]
    WRITE      [reduce using rule 7 (StmtList)]
    $default   reduce using rule 7 (StmtList)

    Program   go to state 5
    DeclList  go to state 6
    Decl      go to state 7
    VarDecl   go to state 8
    StmtList  go to state 9
    Stmt      go to state 10
    Expr      go to state 11


State 1

    6 VarDecl: TYPE . ID SEMICOLON

    ID  shift, and go to state 12


State 2

   11 Expr: ID . EQ RecursiveFunc
   12     | ID . EQ ID
   13     | ID . EQ NUMBER

    EQ  shift, and go to state 13


State 3

    9 Stmt: SEMICOLON .

    $default  reduce using rule 9 (Stmt)


State 4

   14 Expr: WRITE . ID

    ID  shift, and go to state 14


State 5

    0 $accept: Program . $end

    $end  shift, and go to state 15


State 6

    1 Program: DeclList .

    $default  reduce using rule 1 (Program)


State 7

    2 DeclList: Decl . DeclList
    3         | Decl .

    TYPE       shift, and go to state 1
    ID         shift, and go to state 2
    SEMICOLON  shift, and go to state 3
    WRITE      shift, and go to state 4

    $end       reduce using rule 3 (DeclList)
    $end       [reduce using rule 7 (StmtList)]
    TYPE       [reduce using rule 7 (StmtList)]
    ID         [reduce using rule 7 (StmtList)]
    SEMICOLON  [reduce using rule 7 (StmtList)]
    WRITE      [reduce using rule 7 (StmtList)]
    $default   reduce using rule 3 (DeclList)

    DeclList  go to state 16
    Decl      go to state 7
    VarDecl   go to state 8
    StmtList  go to state 9
    Stmt      go to state 10
    Expr      go to state 11


State 8

    4 Decl: VarDecl .

    $default  reduce using rule 4 (Decl)


State 9

    5 Decl: StmtList .

    $default  reduce using rule 5 (Decl)


State 10

    8 StmtList: Stmt . StmtList

    ID         shift, and go to state 2
    SEMICOLON  shift, and go to state 3
    WRITE      shift, and go to state 4

    ID         [reduce using rule 7 (StmtList)]
    SEMICOLON  [reduce using rule 7 (StmtList)]
    WRITE      [reduce using rule 7 (StmtList)]
    $default   reduce using rule 7 (StmtList)

    StmtList  go to state 17
    Stmt      go to state 10
    Expr      go to state 11


State 11

   10 Stmt: Expr . SEMICOLON

    SEMICOLON  shift, and go to state 18


State 12

    6 VarDecl: TYPE ID . SEMICOLON

    SEMICOLON  shift, and go to state 19


State 13

   11 Expr: ID EQ . RecursiveFunc
   12     | ID EQ . ID
   13     | ID EQ . NUMBER

    ID      shift, and go to state 20
    NUMBER  shift, and go to state 21

    RecursiveFunc  go to state 22


State 14

   14 Expr: WRITE ID .

    $default  reduce using rule 14 (Expr)


State 15

    0 $accept: Program $end .

    $default  accept


State 16

    2 DeclList: Decl DeclList .

    $default  reduce using rule 2 (DeclList)


State 17

    8 StmtList: Stmt StmtList .

    $default  reduce using rule 8 (StmtList)


State 18

   10 Stmt: Expr SEMICOLON .

    $default  reduce using rule 10 (Stmt)


State 19

    6 VarDecl: TYPE ID SEMICOLON .

    $default  reduce using rule 6 (VarDecl)


State 20

   12 Expr: ID EQ ID .
   16 RecursiveFunc: ID . ADD_OP RecursiveFunc
   18              | ID .

    ADD_OP  shift, and go to state 23

    SEMICOLON  reduce using rule 12 (Expr)
    SEMICOLON  [reduce using rule 18 (RecursiveFunc)]
    $default   reduce using rule 12 (Expr)


State 21

   13 Expr: ID EQ NUMBER .
   15 RecursiveFunc: NUMBER . ADD_OP RecursiveFunc
   17              | NUMBER .

    ADD_OP  shift, and go to state 24

    SEMICOLON  reduce using rule 13 (Expr)
    SEMICOLON  [reduce using rule 17 (RecursiveFunc)]
    $default   reduce using rule 13 (Expr)


State 22

   11 Expr: ID EQ RecursiveFunc .

    $default  reduce using rule 11 (Expr)


State 23

   16 RecursiveFunc: ID ADD_OP . RecursiveFunc

    ID      shift, and go to state 25
    NUMBER  shift, and go to state 26

    RecursiveFunc  go to state 27


State 24

   15 RecursiveFunc: NUMBER ADD_OP . RecursiveFunc

    ID      shift, and go to state 25
    NUMBER  shift, and go to state 26

    RecursiveFunc  go to state 28


State 25

   16 RecursiveFunc: ID . ADD_OP RecursiveFunc
   18              | ID .

    ADD_OP  shift, and go to state 23

    $default  reduce using rule 18 (RecursiveFunc)


State 26

   15 RecursiveFunc: NUMBER . ADD_OP RecursiveFunc
   17              | NUMBER .

    ADD_OP  shift, and go to state 24

    $default  reduce using rule 17 (RecursiveFunc)


State 27

   16 RecursiveFunc: ID ADD_OP RecursiveFunc .

    $default  reduce using rule 16 (RecursiveFunc)


State 28

   15 RecursiveFunc: NUMBER ADD_OP RecursiveFunc .

    $default  reduce using rule 15 (RecursiveFunc)
